--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,24 @@
-# Python
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyc
-
-# Virtual Environment
-venv/
-ENV/
-env/
-
-# Node.js
-node_modules/
-
-# Other
-.DS_Store
-.vscode/
+# Logs
+logs
 *.log
-.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
